--- a/sports_person_classifier.ipynb
+++ b/sports_person_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "315e7b94-0a83-4e1c-98ef-67f599b1ae4e",
    "metadata": {},
    "outputs": [],
@@ -16,18 +16,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b67651e4-1a0e-442a-a21a-da8a90d00f3f",
+   "execution_count": 14,
+   "id": "8a43b78a-d088-4d15-b3cc-9c1aeeb42653",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(555, 700, 3)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%pip install opencv-python"
+    "img = cv2.imread('./test_images/sharapova1.jpg')\n",
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "174b4af0-76f2-4769-b3c0-12003e6d2c5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(555, 700)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "gray.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b550c097-ab84-4303-b5f5-84dd4bdf4c9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[352,  38, 233, 233]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "face_cascade = cv2.CascadeClassifier('./opencv/haarcascades/haarcascade_frontalface_default.xml')\n",
+    "eye_cascade = cv2.CascadeClassifier('./opencv/haarcascades/haarcascade_eye.xml')\n",
+    "\n",
+    "faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
+    "faces"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b550c097-ab84-4303-b5f5-84dd4bdf4c9c",
+   "id": "04eef86e-5bbe-46b8-b6c1-53bdecfe1fef",
    "metadata": {},
    "outputs": [],
    "source": []
